--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ APScheduler==3.7.0
 certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
+cycler==0.10.0
 Flask==1.1.2
 Flask-APScheduler==1.12.2
 Flask-Migrate==2.7.0
@@ -12,13 +13,17 @@ idna==2.10
 importlib-metadata==3.9.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
+kiwisolver==1.3.1
 lxml==4.6.3
 Mako==1.1.4
 MarkupSafe==1.1.1
+matplotlib==3.4.1
 multitasking==0.0.9
 numpy==1.20.2
 pandas==1.2.4
+Pillow==8.2.0
 psycopg2==2.8.6
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
@@ -29,5 +34,6 @@ typing-extensions==3.7.4.3
 tzlocal==2.1
 urllib3==1.26.4
 Werkzeug==1.0.1
+wordcloud==1.8.1
 yfinance==0.1.59
 zipp==3.4.1
